--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="images/WhatsApp Image 2025-06-04 at 12.34.00_fd6307ed.jpg" alt="logo" class="logo-img" />
+      <img src="IMAGES/LOGO.jpg" alt="logo" class="logo-img" />
       YOUTHWILLER
     </div>
     <nav>
@@ -24,9 +24,7 @@
       </ul>
     </nav>
   </header>
-  
-
-  
+   
   <section id="home">
     <h1>Welcome to YOUTHWILLER</h1>
     <p>Your platform for youth empowerment through, volunteering, and spiritual wellness.
@@ -49,8 +47,6 @@
     </div>
   </section>
   
-  
-  
   <section id="about">
     <h2>About Us</h2>
     <p>At Youth Willers, we turn your vision into unforgettable experiences. Whether you're planning a wedding, dinner party, corporate gathering, or a grand celebration, our team is here to bring every detail to life — from the first spark of an idea to the final clean-up.</p>
@@ -62,14 +58,14 @@
   <section id="previous-events">
     <h2>Previous Events</h2>
     <div class="previous-event">
-      <img src="images/WhatsApp Image 2025-06-05 at 15.31.05_c9fa6f42.jpg" alt="Event 1">
+      <img src="IMAGES/Zakir khan.jpg" alt="Event 1">
       <div class="event-desc">
         <h3>Stand Up Comedy</h3>
         <p>Experience an unforgettable evening of laughter with Zakir Khan, one of India’s most beloved comedians. His unique storytelling and relatable humor promise to leave you in splits and create memories that last a lifetime.</p>
       </div>
     </div>
     <div class="previous-event reverse">
-      <img src="images/social cause.jpg" alt="Event 2">
+      <img src="IMAGES/SOCIAL EVENT.jpg" alt="Event 2">
       <div class="event-desc">
         <h3>#Ekpaudhaunkenaam</h3>
         <p>Join our green initiative, “Ek Paudha Unke Naam,” where we plant trees in honor of our loved ones. Together, let’s make the world greener and celebrate special bonds by nurturing life and giving back to nature.</p>
@@ -80,7 +76,7 @@
         <h3>Deepotasava</h3>
         <p>Celebrate the festival of lights at our Deepotsava event in Kanpur! Witness thousands of diyas illuminating the night, enjoy cultural performances, and be part of a vibrant community gathering that spreads joy, unity, and positivity.</p>
       </div>
-      <img src="images/Screenshot 2025-06-05 152619.png" alt="Event 3">
+      <img src="IMAGES/DEEPOTASAVA.png" alt="Event 3">
     </div>
     <p>Highlights and memories of our past events will be displayed here.</p>
   </section>
@@ -120,7 +116,6 @@
   <section id="spirit-yoga" class="spirit-yoga">
   <h2>Spirit Yoga</h2>
   
-  <!-- Yoga photos grid -->
   <div class="yoga-photos">
     <div class="yoga-image-inline">
       <img src="IMAGES/YOGA1.JPG" alt="Spirit Yoga Session">
@@ -128,18 +123,13 @@
     <div class="yoga-image-inline">
       <img src="IMAGES/YOGA2.JPG" alt="Yoga Meditation">
     </div>
-   
   </div>
-
-  <!-- Description text -->
   <p>
     Experience the blend of mind and body awareness through our Spirit Yoga sessions, specially curated for young minds. 
     These sessions integrate mindfulness, movement, and meditation to help youth manage stress, improve focus, and reconnect with themselves. 
     Whether you're a beginner or experienced practitioner, Spirit Yoga offers a rejuvenating journey towards balance and inner peace.
   </p>
 </section>
-
-
 
   <footer>
     <p>&copy; 2025 YOUTHWILLER. All rights reserved.</p>
@@ -148,4 +138,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
