--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#HIONENE">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href="#about">About Us</a></li>
         <li><a href="#previous-events">Previous Events</a></li>
         <li><a href="#join">Join</a></li>
